[tool.poetry]
name = "omiclass"
version = "0.1.0"
description = "\"Classify samples based on omic features\""
authors = ["Steve Hoang"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
